modificaciones para poder verlo en el cel

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second Brain</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>🧠 Second Brain</title>
     <!-- Favicon usando emoji -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧠</text></svg>">
     <!-- Enlace a los estilos CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Meta tags para mejor SEO y compartir en redes sociales -->
+    <meta name="description" content="Una colección interactiva de recursos y conocimientos">
+    <meta name="theme-color" content="#e9e9e9">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="🧠 Second Brain">
+    <meta property="og:description" content="Una colección interactiva de recursos y conocimientos">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="🧠 Second Brain">
+    <meta name="twitter:description" content="Una colección interactiva de recursos y conocimientos">
 </head>
 <body>
     <div id="info">🧠 Second Brain</div>
